--- a/_publications/ICDM2023.md
+++ b/_publications/ICDM2023.md
@@ -5,16 +5,20 @@ permalink: /publication/ICDM2023
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2023-12-01
 venue: 'ICDM'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10415815?casa_token=TdgDd3rZEdEAAAAA:P7-IDLEgkMipiKwStk6p3AdiZfMtVc1gbJv2qMR3S-563J5ugbp_78atM4DmDOGWM7qKo3lyWg'
+paperurl: ''
 citation: 'Tianyi, Ma. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
 ---
-This paper is about the number 3. The number 4 is left for future work.
 
-[Download paper here](http://academicpages.github.io/files/paper3.pdf)
+Recommended citation:
 
-Recommended citation: Your Name, You. (2015). "Paper Title Number 3." <i>Journal 1</i>. 1(3).
-
-
+```
+@inproceedings{qianco,
+  title={Hypergraph Contrastive Learning for Drug Trafficking Community Detection},
+  author={Ma, Tianyi and Qian, Yiyue and Zhang, Chuxu  and Ye, Yanfang },
+  booktitle={The IEEE International Conference on Data Mining},
+  year={2023}
+}
+```
 
 
 
