--- a/_publications/ICDM2023.md
+++ b/_publications/ICDM2023.md
@@ -6,11 +6,9 @@ excerpt: 'This paper is about the number 3. The number 4 is left for future work
 date: 2023-12-01
 venue: 'ICDM'
 paperurl: ''
-citation: 'Tianyi, Ma. (2015). &quot;Paper Title Number 3.&quot; <i>Journal 1</i>. 1(3).'
+citation: ''
 ---
-
 Recommended citation:
-
 ```
 @inproceedings{qianco,
   title={Hypergraph Contrastive Learning for Drug Trafficking Community Detection},
