Update ICDM2023 collection formatting

--- a/_publications/ICDM2023.md
+++ b/_publications/ICDM2023.md
@@ -1,6 +1,6 @@
 ---
 title: "Hypergraph Contrastive Learning for Drug Trafficking Community Detection"
-collection: "The IEEE International Conference on Data Mining (ICDM)"
+collection: The IEEE International Conference on Data Mining (ICDM)
 permalink: /publication/ICDM2023
 excerpt: <img src='/images/Framework/ICDM2023.png'>In this work, we propose a novel HyperGraph Contrastive Learning framework called **HyGCL-DC** that employs hypergraph to model the higher-order relationships among users to detect Drug trafficking Communities. Our newly collected dataset and source code is available [here](https://github.com/GraphResearcher/HyGCL-DC).
 date: 2023-12-01
