Update conference program committee membership and publication citations

--- a/_publications/ICDM2023.md
+++ b/_publications/ICDM2023.md
@@ -6,7 +6,7 @@ excerpt: <img src='/images/Framework/ICDM2023.png'>In this work, we propose a no
 date: 2023-12-01
 venue: 'ICDM'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/10415815'
-citation: '**Ma, T.**, Qian, Y., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023.'
+citation: "Ma, T., Qian, Y., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
 ---
 
 
