--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -7,7 +7,7 @@ framework with Adaptive Temperature (**HyGCL-AdT**) to boost contrastive learnin
 date: 2024
 venue: "WWW"
 paperurl: ""
-citation: "Qian, Y., **Ma, T.**, Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
+citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
 ---
 
 
