Update conference program committee membership and publication citations

--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -6,7 +6,7 @@ excerpt: <img src='/images/Framework/WWW2024.png'>We propose a novel dual-level 
 framework with Adaptive Temperature (**HyGCL-AdT**) to boost contrastive learning over hypergraphs. Our source code is available [here](https://github.com/graphprojects/HyGCL-AdT).
 date: 2024
 venue: "WWW"
-paperurl: ""
+paperurl: 
 citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
 ---
 
