Update publication date for WWW2024 to 2024-03-20

--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -4,7 +4,7 @@ collection: The International World Wide Web Conference (WWW)
 permalink: /publication/WWW2024
 excerpt: <img src='/images/Framework/WWW2024.png'>We propose a novel dual-level HyperGraph Contrastive Learning
 framework with Adaptive Temperature (**HyGCL-AdT**) to boost contrastive learning over hypergraphs. Our source code is available [here](https://github.com/graphprojects/HyGCL-AdT).
-date: 2024
+date: 2024-03-20
 venue: "WWW"
 paperurl: 
 citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
