--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -5,9 +5,9 @@ permalink: /publication/WWW2024
 excerpt: <img src='/images/Framework/WWW2024.png'>We propose a novel dual-level HyperGraph Contrastive Learning
 framework with Adaptive Temperature (**HyGCL-AdT**) to boost contrastive learning over hypergraphs. Our source code is available [here](https://github.com/graphprojects/HyGCL-AdT).
 date: 2024-03-20
-venue: "WWW"
-paperurl: ""
-citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
+venue: 'WWW'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/10415815'
+citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Dual-level Hypergraph Contrastive Learning with Adaptive Temperature Enhancement. In WWW 2024ß."
 ---
 
 
