Update avatar image in _config.yml and citation in WWW2024.md

--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -7,7 +7,7 @@ framework with Adaptive Temperature (**HyGCL-AdT**) to boost contrastive learnin
 date: 2024-03-20
 venue: 'WWW'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/10415815'
-citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Dual-level Hypergraph Contrastive Learning with Adaptive Temperature Enhancement. In WWW 2024ß."
+citation: "Qian, Y., Ma, T., Zhang, C., & Ye, Y. Dual-level Hypergraph Contrastive Learning with Adaptive Temperature Enhancement. In WWW 2024."
 ---
 
 
