Update excerpts in ICDM2023.md and WWW2024.md

--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -2,7 +2,7 @@
 title: "Dual-level Hypergraph Contrastive Learning with Adaptive Temperature Enhancement"
 collection: publications
 permalink: /publication/WWW2024
-excerpt: <img src='/images/Framework/WWW2024.png'>We propose a novel dual-level HyperGraph Contrastive Learning
+excerpt: We propose a novel dual-level HyperGraph Contrastive Learning
 framework with Adaptive Temperature (**HyGCL-AdT**) to boost contrastive learning over hypergraphs. Our source code is available [here](https://github.com/graphprojects/HyGCL-AdT).
 date: 2024-03-20
 venue: 'WWW'
