Update image paths in ICDM2023.md and WWW2024.md

--- a/_publications/ICDM2023.md
+++ b/_publications/ICDM2023.md
@@ -9,4 +9,4 @@ paperurl: 'https://ieeexplore.ieee.org/abstract/document/10415815'
 citation: "Ma, T., Qian, Y., Zhang, C., & Ye, Y. Hypergraph Contrastive Learning for Drug Trafficking Community Detection. In ICDM 2023."
 ---
 
-<img src="images/Framework/ICDM2023.png">
+<img src="../images/Framework/ICDM2023.png">
