--- a/_publications/WWW2024.md
+++ b/_publications/WWW2024.md
@@ -11,4 +11,4 @@ citation: 'Qian, Y., Ma, T., Zhang, C., & Ye, Y. Dual-level Hypergraph Contrasti
 ---
 
 
-<img src="images/Framework/WWW2024.png">
+<img src="../images/Framework/WWW2024.png">
