Update contact information and URLs in _config.yml and ICDM2023.md

--- a/_talks/2023-12-01-ICDM2023.md
+++ b/_talks/2023-12-01-ICDM2023.md
@@ -1,9 +1,9 @@
 ---
-title: "Presentation for ICDM'23"
+title: "[ICDM'23] Hypergraph Contrastive Learning for Drug Trafficking Community Detection"
 collection: talks
 type: "Talk"
 permalink: /talks/2023-12-01-ICDM2023
-venue: "UC San Francisco, Department of Testing"
+venue: "23rd IEEE International Conference on Data Mining"
 date: 2023-12-01
 location: "Shanghai, China (online)"
 ---
