Revise blog post formatting by changing section headers from H1 to H2 for improved structure and readability.

--- a/_posts/2025-10-23-blog-post-1.md
+++ b/_posts/2025-10-23-blog-post-1.md
@@ -8,13 +8,13 @@ tags:
     - LLM
 ---
 
-# Introduction 
+## Introduction 
 
 [Spec-kit](https://github.com/github/spec-kit) is an open source toolkit that allows you to focus on product scenarios and predictable outcomes instead of vibe coding every piece from scratch.
 It comes with 5 stages and 7 commands to facilitate the development team to build production-level projects quickly and efficiently (Of course, integrated with Coding Agents like Claude Code, Codex, etc.)
 
 
-# Takeaway 
+## Takeaway 
 
 - Spec-kit follows the specification-driven development (SDD) paradigm where specifications define the **what** before **how**. 
 - Spec-kit Pros:
